--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Threads Downloader Website and API",
   "dependencies": {
     "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "@vercel/node": "^2.0.0"
   }
 }
